<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/account_navigation"
            android:title="@string/account"
            android:icon="@drawable/profile">

        </item>

        <item
            android:id="@+id/status_navigation"
            android:title="@string/status"
            android:icon="@drawable/status">

        </item>

        <item
            android:id="@+id/order_history_navigation"
            android:title="@string/order_history"
            android:icon="@drawable/order_history">

        </item>

        <item
            android:id="@+id/logout_navigation"
            android:title="@string/logout3"
            android:icon="@drawable/logout">

        </item>

    </group>

</menu>